--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,10 @@ def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
+safeExtGet('versionNum', '0.11.0')
+safeExtGet('versionName', 'Release')
+safeExtGet('versionDate', new Date())
+
 buildscript {
     // The Android Gradle plugin is only required when opening the android folder stand-alone.
     // This avoids unnecessary downloads and potential conflicts when the library is included as a
