fix gradle issue and update readme

--- a/appauth-android/config/style.gradle
+++ b/appauth-android/config/style.gradle
@@ -7,6 +7,8 @@ checkstyle {
 }
 
 task checkAllSource(type: Checkstyle) {
+    project.configurations.implementation.setCanBeResolved(true)
+    project.configurations.api.setCanBeResolved(true)
     afterEvaluate {
         source 'java'
         include '**/*.java'
